// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supplicate (MCV) Bypass guard via direct token movement (MCV path) ERC20.transfer / transferFrom to pool must NOT mutate reserves 1`] = `
Object {
  "note": "Direct token moves cannot spoof LPP reserves (MCV path)",
  "reservesAfter": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "reservesBefore": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "role": "MCV",
}
`;

exports[`Supplicate (MCV) MCV executes single-pool rebalance — ASSET->USDC 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000000",
      "u": "100000000990099009900990099",
    },
    "before": Object {
      "a": "100000001000000000000000000",
      "u": "100000000000000000000000000",
    },
  },
  "direction": "ASSET->USDC",
  "quotes": Object {
    "poolQuote": "990099009900990099",
    "routerStatic": "990099009900990099",
  },
  "reserves": Object {
    "after": Object {
      "a": "101000000000000000000",
      "u": "99009900990099009901",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "role": "MCV",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "78443725261647859003512783905",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;

exports[`Supplicate (MCV) MCV executes single-pool rebalance — USDC->ASSET 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "caller": Object {
    "after": Object {
      "a": "100000000990099009900990099",
      "u": "100000000000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000000000",
      "u": "100000001000000000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "poolQuote": "990099009900990099",
  "reserves": Object {
    "after": Object {
      "a": "99009900990099009901",
      "u": "101000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "role": "MCV",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "80020444139406980969475388817",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "79228162514264337593543950336",
      "before": "79228162514264337593543950336",
    },
  },
}
`;
